# avto-webapp

./: README.md  webapp_index.html
uzbekcha dasturlash tili AL/: LICENSE  MANIFEST.in  README.md  al_spyder.py  cli.py  github_yuklash.bat  pyproject.toml  requirements.txt  setup.py
uzbekcha dasturlash tili AL/al/: __init__.py  errors.py  interpreter.py  lexer.py  parser.py  repl.py  tokens.py  transpiler.py
uzbekcha dasturlash tili AL/al_til.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uzbekcha dasturlash tili AL/kutubxona/: __init__.py  asosiy.py  fayl.py  matematika.py  matn.py  vaqt.py
uzbekcha dasturlash tili AL/misollar/: aql_misol.py  blokcheyn_misol.py  salom_dunyo.al  web_server.py
uzbekcha dasturlash tili AL/modullar/: __init__.py
uzbekcha dasturlash tili AL/modullar/aql/: __init__.py  malumot.py  neyron.py
uzbekcha dasturlash tili AL/modullar/blokcheyn/: __init__.py  hamyon.py  zanjir.py
uzbekcha dasturlash tili AL/modullar/mobil/: __init__.py  ilova.py
uzbekcha dasturlash tili AL/modullar/web/: __init__.py  sahifa.py  server.py
uzbekcha dasturlash tili AL/uzbekchadasturlash/: README.md
uzbekcha dasturlash tili AL/uzbekchadasturlash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
